# trade_bot

./: .gitignore  README.md  pyproject.toml  run_flask.py
trade_bot/: config.py
trade_bot/src/: alert_system.py  backtest.py  data_pipeline.py  main.py  strategy.py  test_adx.py  visualizacao.py
trade_bot/src/web/: server.py
trade_bot/src/web/static/css/: styles.css
trade_bot/src/web/static/js/: main.js
trade_bot/src/web/templates/: index.html
